@@ -1,3 +1,7 @@
+2008-12-12  Dmitry Dulepov  <dmitry@typo3.org>
+
+	* Fixed bug #9884: enhancements to memcached caching backend
+
 2008-12-09  Steffen Kamper  <info@sk-typo3.de>
 
 	* Fixed bug #9915: Typing error in tslib_content ($gifCreateor => $gifCreator)
